--- a/website/404.html
+++ b/website/404.html
@@ -39,7 +39,7 @@
   />
 
   
-  <title>Tags - My New Hugo Site</title>
+  <title>404 Page not found - My New Hugo Site</title>
 
   
   <meta name="theme-color" />
@@ -78,13 +78,6 @@
 
   
   
-  <link
-    rel="alternate"
-    type="application/rss&#43;xml"
-    href="/tags/index.xml"
-    title="My New Hugo Site"
-  />
-  
 
   
   
@@ -95,17 +88,17 @@
   
   
   
-  <meta property="og:title" content="Tags" />
+  <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/tags/" />
+<meta property="og:url" content="/404.html" />
 
   
-  <meta itemprop="name" content="Tags">
+  <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="">
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Tags"/>
+<meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content=""/>
 
   
@@ -188,22 +181,11 @@
       class="prose prose-neutral relative mx-auto min-h-[calc(100%-10rem)] max-w-3xl px-8 pt-20 pb-32 dark:prose-invert"
     >
       
-
-
-
-<h1 class="mb-24">Tags</h1>
-
-
-
-
-
-
-
- 
-
-
-
-
+<h1
+  class="absolute inset-x-8 top-0 bottom-20 flex items-center justify-center text-9xl"
+>
+  404
+</h1>
 
     </main>
 
