--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
   />
 
   
-  <title>Tags - My New Hugo Site</title>
+  <title>My New Hugo Site</title>
 
   
   <meta name="theme-color" />
@@ -81,7 +81,7 @@
   <link
     rel="alternate"
     type="application/rss&#43;xml"
-    href="/tags/index.xml"
+    href="/index.xml"
     title="My New Hugo Site"
   />
   
@@ -95,17 +95,17 @@
   
   
   
-  <meta property="og:title" content="Tags" />
+  <meta property="og:title" content="My New Hugo Site" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/tags/" />
+<meta property="og:url" content="/" />
 
   
-  <meta itemprop="name" content="Tags">
+  <meta itemprop="name" content="My New Hugo Site">
 <meta itemprop="description" content="">
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Tags"/>
+<meta name="twitter:title" content="My New Hugo Site"/>
 <meta name="twitter:description" content=""/>
 
   
@@ -191,7 +191,7 @@
 
 
 
-<h1 class="mb-24">Tags</h1>
+
 
 
 
